welcome.lessons.welcome.methods.slug.SlugTracking.scala.code
def isFacingTrail():Boolean = {
  avance()
  return get couleurSol()
    // Write your code here
}